# libSOIL

./: .travis.yml  README.md  appveyor.yml
projects/linux/: makefile
projects/win/: CMakeLists.txt
